# multigait

./: README.md  conftest.py  pyproject.toml
examples/CAD/: example_cad.py
examples/GSD/: example_GSD1.py  example_GSD2.py  example_GSD3.py  example_GSD4.py  example_GSD5.py
examples/ICD/: example_ICD1.py  example_ICD2.py  example_ICD3.py  example_ICD4.py  example_ICD5.py  example_ICD6.py
examples/SL/: example_SL1.py  example_SL2.py  example_SL3.py
examples/WS/: example_WS.py
examples/cwa_loader/: cwa_loader.py
examples/example_data/: example_constructor.py
examples/interpolation/: interpolation.py
examples/pipeline/: complete_pipeline.py  step_by_step_pipeline.py
multigait/CAD/: cad.py
multigait/CAD/utils/: cad_utils.py
multigait/GSD/: GSD3.py  GSD4.py  GSD5.py
multigait/ICD/: ICD1.py  ICD2.py  ICD3.py  ICD6.py
multigait/SL/: SL3.py
multigait/WS/: walking_speed.py
multigait/aggregation/: _aggregator_base.py  _lab_aggregator.py
multigait/data/: base_data.py
multigait/interpolation_ts/: interpolation.py
multigait/pipeline/: iterator.py  multimobility_pipeline.py  pipeline_base.py  wba_base.py
multigait/utils/: data_loader.py  interp.py  ploter.py
tests/test_CAD/: test_CAD.py
tests/test_ICD/: test_ICD1.py  test_ICD2.py  test_ICD3.py  test_ICD4.py  test_ICD5.py  test_ICD6.py
tests/test_SL/: test_SL1.py  test_SL2.py  test_SL3.py
tests/test_WS/: test_WS.py
tests/test_aggregator/: test_aggregator.py
tests/test_gsd/: test_GSD1.py  test_GSD2.py  test_GSD3.py  test_GSD4.py  test_GSD5.py
tests/test_pipeline/: test_pipeline.py
(+66 files in other folders)
